--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,13 @@
 
 # compiled output
 /dist
+/e2e
 /tmp
 /out-tsc
+
+#firebase
+/.firebase
+
 # Only exists if Bazel was run
 /bazel-out
 
@@ -44,3 +49,5 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+
