--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,13 @@
 /tmp
 /out-tsc
 
+#assets & enviroment
+/src/assets
+src/enviroment
+
 #firebase
 /.firebase
+.firebaserc
 
 # Only exists if Bazel was run
 /bazel-out
@@ -27,6 +32,7 @@ speed-measure-plugin*.json
 *.launch
 .settings/
 *.sublime-workspace
+.editorconfig
 
 # IDE - VSCode
 .vscode/*
